Support for a ... somewhat strange method of doing >512 byte/block ADOSFS partitions. By Matthias Scheler via PR 2559. A diagnostic check was updated by myself.